--- a/templates/index.html
+++ b/templates/index.html
@@ -171,15 +171,13 @@
         </s-menu>
         <s-menu>
           <div slot="label">其他</div>
-          <s-menu-item onclick="openGithubRepo()"> Github </s-menu-item>
+          <s-menu-item onclick="triggerBot()"> 呼叫 </s-menu-item>
           <s-menu-item onclick="openAboutDialog()"> 关于 </s-menu-item>
           <s-dialog style="padding: 16px;" id="nav-about-dialog">
             <div slot="headline"> 关于 </div>
             <div slot="text">
-              <p>WorthIt 记物是一个开源的物品管理应用，旨在帮助用户记录和管理他们的物品。</p>
-              <p>项目地址：<a href="https://github.com/GamerNoTitle/WorthIt"
-                  target="_blank">https://github.com/GamerNoTitle/WorthIt</a></p>
-              <p>如果您对这个项目感兴趣，欢迎访问我的 Github 页面了解更多信息。</p>
+              <p>哈哈，欢迎来到我的 WorthIt 记物应用 (*^▽^*)</p>
+              <p>我超喜欢这里的，你可以点击侧边栏里面的「呼叫」按钮来让我回来哦！</p>
             </div>
             <s-button slot="action" type="text">关闭</s-button>
           </s-dialog>
